CXO-8585 Small refactoring: renaming some members to reflect better their meaning Removing Base64 usage Refactoring configuration file